<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/text_view_group_by_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_group_by_title"
        app:layout_constraintEnd_toStartOf="@id/spinner_group_by"
        app:layout_constraintTop_toTopOf="@id/spinner_group_by"
        app:layout_constraintBottom_toBottomOf="@id/spinner_group_by"/>
    <Spinner
        android:id="@+id/spinner_group_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_start_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_service_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_start_loading"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"/>


    <Button
        android:id="@+id/button_start_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_loading_button"
        app:layout_constraintStart_toEndOf="@id/button_start_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_show_status_console"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_status_console_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>